--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,8 +10,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      #test 용 properties 를 추가
       - uses: actions/checkout@v3
-
+      - run: touch ./src/main/resources/application-test.properties
+      - run: echo "${{ secrets.TEST_PROPERTIES }}" > ./src/main/resources/application-test.properties
+      - run: cat ./src/main/resources/application-test.properties
+      
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
@@ -20,7 +24,7 @@ jobs:
           cache: maven
 
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: mvn -B package --file pom.xml -P test
 
       - name: copy file
         uses: appleboy/scp-action@master
